# ag-advisor-map

./: .gitignore  .npmrc  package.json  pnpm-lock.yaml
backend/: package.json  pyproject.toml
backend/app/: main.py
backend/app/api/: chat.py
backend/app/core/: config.py
backend/app/models/: chat.py
backend/app/services/: openrouter.py
frontend/: postcss.config.cjs
frontend/src/: main.ts  shared.d.ts
frontend/src/api/: query.ts
frontend/src/components/: ActionToolbar.vue  ControlPanel.vue  MapView.vue
frontend/src/components/Chat/: ChatWidget.vue
frontend/src/components/Map/: DeckGL.vue  TileLayer.vue
frontend/src/composables/: useChatService.ts  useMapClickHandler.ts  useMapbox.ts  useReactiveMapDataManager.ts  useTargetMarker.ts
frontend/src/stores/: availableDataStore.ts  locationStore.ts  mapStore.ts  pointDataStore.ts  productStore.ts
